--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+nav {
+    background-color: red;
+    color: black;
+    display: flex;
+    justify-content: center;
+}
+
+a { 
+    text-decoration: none;
+    color: black;
+    font-size: large;
+   
+}
+
+nav ul {
+    list-style-type: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+
+nav ul li {
+    display: inline-flex;
+    margin:0.3em 1em;
+   
+}
+
+
 #title {
     color: #111; 
     font-family: 'Helvetica Neue', sans-serif;
@@ -13,3 +40,4 @@
     max-width: 100%;
     height:auto;
 }
+
