--- a/style.css
+++ b/style.css
@@ -64,3 +64,19 @@ h1 {
     flex-direction: column;
     align-items: center;
     }
+
+.column {
+    float: left; 
+    width: 50%;
+}
+
+/* clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.photo {
+    max-width: 100%;
+}
