--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
     list-style-type: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;
+    color:blueviolet;
 }
 
 .video-class {
