--- a/style.css
+++ b/style.css
@@ -73,3 +73,13 @@ h1 {
     margin-right: auto;
     width: 50%;
   }
+
+.container {
+
+
+    display: -webkit-flex;
+    dislay: flex;
+    flex-wrap: wrap;
+    
+    
+}
